# py-sr25519-bindings

./: Cargo.toml  build.sh  pyproject.toml  tests.py
src/: lib.rs
