[package]
name = "py-sr25519-bindings"
description = "Python bindings for  full sr25519 library"
authors=["openAware B.V."]
version = "0.2.0"
repository = "https://github.com/hasanizadeh"
homepage = "https://github.com/hasanizadeh"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
schnorrkel = "0.9.1"

[dependencies.curve25519-dalek]
package = "curve25519-dalek-ng"
# git = "https://github.com/dalek-cryptography/curve25519-dalek"
version = "4.0"

[dev-dependencies]
hex-literal = "0.2"

[lib]
name = "sr25519"
crate-type = ["cdylib"]

# Allows `cargo test --no-default-features` to work
# see: https://github.com/PyO3/pyo3/issues/341
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies.pyo3]
version = "0.10.1"

[package.metadata.maturin]
maintainer = "Nobitex"
maintainer-email = "p.hasanizadeh@nobitex.net"
classifier = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
