[package]
name = "py-sr25519-bindings-fork"
description = "Fork Python bindings for sr25519 library"
authors=["Polkascan Foundation"]
version = "0.2.4"
repository = "https://github.com/aghamir/py-sr25519-bindings"
homepage = "https://github.com/aghamir/py-sr25519-bindings"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
schnorrkel = "0.10.2"

[dependencies.curve25519-dalek]
package = "curve25519-dalek-ng"
# git = "https://github.com/dalek-cryptography/curve25519-dalek"
version = "4.0"

[dev-dependencies]
hex-literal = "0.3.4"

[lib]
name = "sr25519_nbx"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module"]

