[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "py-sr25519-bindings-fork"
version = "0.2.5"
description = "Fork Python bindings for sr25519 library"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "Mohammad Aghamir"}
]
maintainers = [
  {name = "Nobitex"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
repository = "https://github.com/aghamir/py-sr25519-bindings"
homepage = "https://github.com/aghamir/py-sr25519-bindings"
